build in travis using CMAKE 3.2.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,9 @@ compiler:
     - gcc
 
 before_install:
+    - wget http://www.cmake.org/files/v3.2/cmake-3.2.2.tar.gz
+    - tar xf cmake-3.2.2.tar.gz
+    - cd cmake-3.2.2
+    - ./configure
+    - make
     - cmake -DBUILD_TEST=1
