--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ compiler:
     - gcc
 
 before_script:
-    - wget http://www.cmake.org/files/v3.2/cmake-3.2.2.tar.gz
-    - tar xf cmake-3.2.2.tar.gz
-    - cd cmake-3.2.2
-    - ./configure
-    - make
-    - export PATH=$PATH:$PWD/cmake-3.2.2/bin/
+    - sudo add-apt-repository -y ppa:andykimpe/cmake3
+    - sudo apt-get update -q
+    - sudo apt-get install cmake
 
 before_install
     - cmake -DBUILD_TEST=1
