--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
 before_script:
     - sudo add-apt-repository ppa:andykimpe/cmake3 -y
     - sudo apt-get update -q
-    - sudo apt-get install cmake3
+    - sudo apt-get install cmake
 
 before_install
     - cmake -DBUILD_TEST=1
