added cmake3.0 addon

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,15 @@ sudo: false
 #    - sudo apt-get update -q
 #    - sudo apt-get install cmake
 
+addons:
+  apt:
+    sources:
+    - andykimpe
+
+addons:
+  apt:
+    packages:
+    - cmake
+
 before_install:
     - cmake -DBUILD_TEST=1
