--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,22 @@ compiler:
     - clang
     - gcc
 
-sudo: false
+sudo: true
 
-#before_script:
-#    - sudo add-apt-repository ppa:andykimpe/cmake3 -y
-#    - sudo apt-get update -q
-#    - sudo apt-get install cmake
+before_script:
+    - sudo add-apt-repository ppa:andykimpe/cmake3 -y
+    - sudo apt-get update -q
+    - sudo apt-get install cmake3
 
-addons:
-  apt:
-    sources:
-    - andykimpe
+#addons:
+#  apt:
+#    sources:
+#    - andykimpe
 
-addons:
-  apt:
-    packages:
-    - cmake3
+#addons:
+#  apt:
+#    packages:
+#    - cmake
 
 before_install:
     - cmake -DBUILD_TEST=1
