changed before_script to before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ compiler:
 
 sudo: required
 
-before_script:
+before_install:
     - sudo add-apt-repository ppa:andykimpe/cmake3 -y
     - sudo apt-get update -q
-    - sudo apt-get install cmake3
+    - sudo apt-get install cmake
     - cmake -DBUILD_TEST=1
-
 #addons:
 #  apt:
 #    sources:
