--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - sudo add-apt-repository ppa:andykimpe/cmake3 -y
     - sudo apt-get update -q
     - sudo apt-get install cmake3
-    - cmake3 -DBUILD_TEST=1
+    - cmake -DBUILD_TEST=1
 #addons:
 #  apt:
 #    sources:
