--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ compiler:
 sudo: required
 
 before_install:
-    - sudo add-apt-repository ppa:andykimpe/cmake3 -y
+    - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
     - sudo apt-get update -q
-    - sudo apt-get install cmake3
+    - sudo apt-get install cmake
     - cmake -DBUILD_TEST=1
 #addons:
 #  apt:
