--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 before_install:
     - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
     - sudo apt-get update -q
-    - sudo apt-get install cmake
+    - sudo apt-get install cmake=2.8.12
     - cmake -DBUILD_TEST=1
 #addons:
 #  apt:
