specified cmake version for real this time

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 before_install:
     - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
     - sudo apt-get update -q
-    - sudo apt-get install cmake=2.8.12
+    - sudo apt-get install cmake=2.8.12.2-0~13~ubuntu15.10.1
     - cmake -DBUILD_TEST=1
 #addons:
 #  apt:
