override build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ before_install:
     - sudo apt-get update -q
     - sudo apt-get install cmake=2.8.12.2-0~13~ubuntu12.04.1
     - cmake -DBUILD_TEST=1 .
+
+script:
+    - make && ./MainTest
+
 #addons:
 #  apt:
 #    sources:
