--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,20 @@ sudo: required
 
 before_install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
     - sudo apt-get update -qq
     - sudo apt-get install -qq libyajl-dev libxml2-dev libxqilla-dev
     - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
     - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
     - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
     - sudo apt-get purge cmake
-    - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
-    - sudo apt-get update -q
     - sudo apt-get install cmake=2.8.12.2-0~13~ubuntu12.04.1
-    - sudo apt-get install sqlite3 libsqlite3-dev -y
-    - cmake -DBUILD_TEST=1 .
+    - sudo apt-get install -qq sqlite3 libsqlite3-dev
+
+before_script:
+    - mkdir build
+    - cd build
+    - cmake -DBUILD_TEST=1 ..
 
 script:
     - make && ./MainTest
