needed to install tcl for sqlite3 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
     - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
     - sudo apt-get purge cmake
     - sudo apt-get install cmake=2.8.12.2-0~13~ubuntu12.04.1
+    # Install sqlite 3.7.11+
+    - sudo apt-get install tcl -y
     - wget http://www.sqlite.org/cgi/src/tarball/SQLite-a71e2a72.tar.gz -O sqlite3.7.11.tar.gz
     - tar -xf sqlite3.7.11.tar.gz
     - cd SQLite-a71e2a72 && ./configure --prefix=/usr && make && sudo make install
