--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ link_directories(${SQLiteCppWrapper_BINARY_DIR}/src)
 
 IF(BUILD_SHARED_LIBS)
   SET(SCppQLite_LIBRARY_TYPE SHARED)
-  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 ELSE(BUILD_SHARED_LIBS)
   SET(CppQLite_LIBRARY_TYPE STATIC)
   SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
